--- a/app/views/index.html
+++ b/app/views/index.html
@@ -152,7 +152,7 @@
                     <p class="lead"> “If Music is a Place — then Jazz is the City, Folk is the Wilderness, Rock is the Road, Classical is a Temple.” ― Vera Nazarian</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="/images/music.png" alt="">
+                    <img class="img-responsive" src="/assets/images/music.png" alt="">
                 </div>
             </div>
 
@@ -177,7 +177,7 @@
                     <p class="lead"> Great books help you understand, and they help you feel understood.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="/images/Ebooks.png" alt="">
+                    <img class="img-responsive" src="/assets/images/Ebooks.png" alt="">
                 </div>
             </div>
 
