--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -37,7 +37,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../images/intro-bg.jpg) no-repeat center center;
+    background: url(../assets/images/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -126,7 +126,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../images/banner-bg.jpg) no-repeat center center;
+    background: url(../assets/images/banner-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
