--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
      <!--ngControllers for config-->
     <script src="ngControllers/ngAppConfig.js"></script>
+    <script src="ngControllers/otherControllers/registerController.js"></script>
 
 </head>
 <body ng-controller="mainController">
@@ -37,8 +38,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <div class="header-top-left">
                     <ul>
-                        <li><a href="account.html"><span class="glyphicon glyphicon-user"> </span>Login</a></li>
-                        <li><a href="register.html"><span class="glyphicon glyphicon-lock"> </span>Create an Account</a></li>           
+                        <li><a href="#account"><span class="glyphicon glyphicon-user"> </span>Login</a></li>
+                        <li><a href="#register"><span class="glyphicon glyphicon-lock"> </span>Create an Account</a></li>           
                     </ul>
                 </div>
                 <div class="header-right">
